Created main menu and style for him.

--- a/index.html
+++ b/index.html
@@ -16,19 +16,18 @@
 			<!--		Section start 																										-->
 			<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -	-->
 			<section class="section-start" id="home">
-				<div class="section-start__top">
-					<!-- <a href="#" class="section-start__a">Contact</a> -->
-				</div>
-					
-				<div class="section-start__center">
-				</div>
+				<div class="section-start__main">
+					<div class="section-start__main__logo"></div>
 
-				<div class="section-start__bottom">
+					<div class="section-start__main__heder">
+						<h1>From Idea<br>to Realiz<span>a</span>tion</h1>
+					</div>
+
+					<div class="arrow"></div>
 				</div>
 			</section>
 
 			<section class="navigation">
-				<div class="navigation__logo"></div>
 				<nav class="navigation__nav">
 					<ul class="navigation__list" id="scroll_meny">
 						<li class="navigation__items">
@@ -36,25 +35,24 @@
 						</li>
 
 						<li class="navigation__items">
+							<a class="navigation__items__a" href="#projects" aria-label="Projects">Projects</a>
+						</li>
+
+						<li class="navigation__items">
 							<a class="navigation__items__a" href="#servis" aria-label="Service">Service</a>
 						</li>
 
 						<li class="navigation__items">
-							<a class="navigation__items__a" href="#portfolio" aria-label="Portfolio">Portfolio</a>
+							<a class="navigation__items__a" href="#company" aria-label="Company">Company</a></li>
 						</li>
 
 						<li class="navigation__items">
-							<a class="navigation__items__a" href="#about" aria-label="About">About</a></li>
-						</li>
-
-						<li class="navigation__items">
-							<a class="navigation__items__a" href="#make_order" aria-label="Make Order">Make Order</a>
+							<a class="navigation__items__a" href="#blog" aria-label="Blog">Blog</a>
 						</li>
 
 						<li class="navigation__items">
 							<a class="navigation__items__a" href="#" aria-label="contact">Contact</a>
 						</li>
-
 					</ul>
 				</nav>
 			</section>
