Added routing for navigation.

--- a/index.html
+++ b/index.html
@@ -12,52 +12,39 @@
 	</head>
 	<body>
 		<main>
-			<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -	-->
-			<!--		Section start 																										-->
-			<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -	-->
-			<section class="section-start" id="home">
-				<div class="section-start__main">
-					<div class="section-start__main__logo"></div>
+			<div class="builder-container">
+				<section class="navigation">
+					<nav class="navigation__nav">
+						<ul class="navigation__list" id="scroll_meny">
+							<li class="navigation__items">
+								<a class="navigation__items__a" href="#/home" aria-label="Home">Home</a>
+							</li>
 
-					<div class="section-start__main__heder">
-						<h1>From Idea<br>to Realiz<span>a</span>tion</h1>
-					</div>
+							<li class="navigation__items">
+								<a class="navigation__items__a" href="#/projects" aria-label="Projects">Projects</a>
+							</li>
 
-					<div class="arrow"></div>
-				</div>
-			</section>
+							<li class="navigation__items">
+								<a class="navigation__items__a" href="#/service" aria-label="Service">Service</a>
+							</li>
 
-			<section class="navigation">
-				<nav class="navigation__nav">
-					<ul class="navigation__list" id="scroll_meny">
-						<li class="navigation__items">
-							<a class="navigation__items__a link-home" href="#home" aria-label="home">Home</a>
-						</li>
+							<li class="navigation__items">
+								<a class="navigation__items__a" href="#/company" aria-label="Company">Company</a></li>
+							</li>
 
-						<li class="navigation__items">
-							<a class="navigation__items__a" href="#projects" aria-label="Projects">Projects</a>
-						</li>
+							<li class="navigation__items">
+								<a class="navigation__items__a" href="#/blog" aria-label="Blog">Blog</a>
+							</li>
 
-						<li class="navigation__items">
-							<a class="navigation__items__a" href="#servis" aria-label="Service">Service</a>
-						</li>
+							<li class="navigation__items">
+								<a class="navigation__items__a" href="#" aria-label="contact">Contact</a>
+							</li>
+						</ul>
+					</nav>
+				</section>
 
-						<li class="navigation__items">
-							<a class="navigation__items__a" href="#company" aria-label="Company">Company</a></li>
-						</li>
-
-						<li class="navigation__items">
-							<a class="navigation__items__a" href="#blog" aria-label="Blog">Blog</a>
-						</li>
-
-						<li class="navigation__items">
-							<a class="navigation__items__a" href="#" aria-label="contact">Contact</a>
-						</li>
-					</ul>
-				</nav>
-			</section>
-
-
+				<div class="builder-content"></div>
+			</div>
 		</main>
 		<script src="dist/js/bundle-min.js"></script>
 	</body>
